<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/repoFragment">

    <fragment
        android:id="@+id/repoFragment"
        android:name="com.freesia.tinyftp.ui.repoFragment"
        android:label="@string/repository"
        tools:layout="@layout/fragment_repo">
    </fragment>

    <fragment
        android:id="@+id/settingFragment"
        android:name="com.freesia.tinyftp.ui.settingFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_setting" />
    <fragment
        android:id="@+id/configFragment"
        android:name="com.freesia.tinyftp.ui.ConfigFragment"
        android:label="@string/configs"
        tools:layout="@layout/fragment_config" />

</navigation>