<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settingFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_row="0"
        android:layout_column="0"
        android:id="@+id/add_server"
        android:text="@string/add_a_new_server"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="40dp"
        android:gravity="center"
        android:textStyle="bold" />

    <GridLayout android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:rowCount="10"
        android:columnCount="6">
    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/server_host"
        android:layout_row="0"
        android:layout_column="0" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server_port"
        android:layout_row="1"
        android:layout_column="0" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_row="2"
        android:layout_column="0" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_row="3"
        android:layout_column="0" />
    <EditText
        android:id="@+id/hostEdit"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="192.0.0.1"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_columnSpan="3"
        />
    <EditText
        android:id="@+id/portEdit"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="21"
        android:inputType="number"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_columnSpan="3"
        />
    <EditText
        android:id="@+id/userEdit"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="user"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_columnSpan="3"
        />
    <EditText
        android:id="@+id/pwEdit"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:hint="********"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_columnSpan="3"
        />
    <ImageView
        android:id="@+id/applyBtn"
        android:layout_marginTop="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="1"
        android:src="@drawable/ic_apply"
        />
    <ImageView
        android:id="@+id/resetBtn"
        android:layout_marginTop="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:src="@drawable/ic_reset"
        android:layout_column="3"
        android:layout_gravity="center"
        />
    </GridLayout>
</FrameLayout>